--- a/index.html
+++ b/index.html
@@ -160,11 +160,128 @@
 				<div class="interest"><a href="#">Интересное<br /> о часах</a></div>
 				<div class="help"><a href="#">Помощь в<br /> подборе часов</a></div>
 			</div>
-			<div class="col">
-			  
+			<div class="center_col">
+			  <div class="head_center_col"><a href="#">Купить копии часов</a></div>
+        <p>
+          Не секрет, что по стильным часам на запястье легко прочесть историю успеха их владельца. 
+          По безошибочным и сверхточным наручным механизмам сверяют минуты и часы своей жизни сильные 
+          мира сего. Однако основным предназначением престижных швейцарских часов является статус, 
+          ведь именно эксклюзивное изделие может с точностью рассказать о человеке многое: его 
+          предпочтения, познания модных тенденций и даже положение в обществе.
+        </p>
+        <p>
+          Многовековые традиции всегда достойны уважения. И вдвойне заслуживают уважения те традиции, 
+          которые существуют в отличном сочетании с инновационными технологиями. Швейцарские часы с 
+          точностью соответствуют данному описанию. Ведь именно эти часовые механизмы мы представляем, 
+          когда говорим о высоком качестве и престиже. Но, если рассуждать о надежности вкупе с 
+          доступностью, то обычно предпочитают купить копии часов, однако такие же стильные и уникальные. 
+          Вы можете приобрести такие часы в Москве, Санкт-Петербурге, Екатеринбурге, Краснодаре, 
+          Новосибирске, Воронеже и других городах.
+        </p>
+        <p>
+          Известнейшие люди планеты давно по достоинству оценили швейцарские часы и их копии. 
+          Бизнесмены, спортсмены, звезды кино, политики – все они не готовы изменить высокому 
+          стандарту данных изделий. Более того, знаменитости не отказываются носить также и 
+          реплики часов популярных марок. Если Вы находитесь в Новосибирске, Ростове, Екатеринбурге 
+          и желаете купить копии часов, мы с удовольствием поможем Вам в этом. Покупка качественных 
+          реплик воспринимается окружающими сродни вступлению в vip-клуб, как доказательство 
+          высокого статуса человека.
+        </p>
+        <p>
+          Широкий ассортимент реплик часов от ведущих производителей мира. 
+          Покупайте лучшие копии часов в нашем магазине!
+        </p>
+        <p>
+          Для тех, кому приобрести дорогостоящие часы сейчас не позволяют финансовые возможности, 
+          наш интернет-салон элитных изделий предлагает иное решение. В viptimeclub.ru можно купить 
+          качественные и стильные наручные часы швейцарские, точнее – их высококлассные копии, ведущих 
+          мировых производителей. Данные изделия имеют оригинальную «начинку», которая гарантирует, 
+          что отличить точную реплику от оригинального механизма практически невозможно. Современные 
+          технологии способны творить чудеса – даже часовщик со стажем затрудняется со всей точностью 
+          утверждать, где фирменные часы, а где их копии.
+        </p>
+        <p>
+          Качество копий часов такого уровня очень высоко. Другими словами, это отнюдь не дешевые вещи. 
+          Они создаются вне бренда известных производителей – это основное отличие реплик от оригинальных 
+          изделий. Хочется отметить, что при этом все основные характеристики копии сохраняют практически 
+          в полном объеме.
+        </p>
+        <p>
+          Приобретая копии часов в Москве в viptimeclub.ru, вы получаете не простое изделие. Вы покупаете часы, 
+          которые обладают совершенным механизмом, изготовленные из исключительно качественных и современных 
+          материалов. Это замечательный подарок любимому человеку. Широкие функциональные возможности и 
+          оригинальный дизайн, которыми обладают копии швейцарских часов нашего интернет-магазина, делают их 
+          популярными и востребованными среди покупателей - ценителей высокого качества и стиля.
+        </p>
+        <p>
+          В нашем магазине в Москве Вы найдете большой выбор точных и безукоризненных копий часов, которые 
+          отличает европейское качество, оптимальная стоимость и отличный дизайн. Носить такие реплики всегда 
+          актуально. С нашей помощью легко приобрести стильный аксессуар, благодаря которому вы всегда сможете 
+          выглядеть солидно и эффектно, не прибегая к излишней трате средств
+        </p>
+        <p>
+          Приобрести копии наручных швейцарских часов оригинального производства в нашем интернет-магазине 
+          максимально удобно, ведь мы гарантируем высокое качество обслуживания! Вас приятно удивит 
+          широкий выбор уникальных изделий. Несмотря на то, что Москва чаще всего предлагает довольно 
+          высокие цены на продукцию подобного рода, копии часов в VIPtime-клуб вполне доступны.
+        </p>
+        <p>
+           Вы хотите получить свою копию, но проживаете не в столице нашей страны? Спешим уверить Вас, 
+           это не проблема! Жители Воронежа, Новосибирска, Санкт-Петербурга, Екатеринбурга и любого 
+           другого города могут купить часы швейцарские, точнее их копии, со СКИДКОЙ!пить копии часов
+        </p>
+        <p>
+           Не секрет, что по стильным часам на запястье легко прочесть историю успеха их владельца. 
+           По безошибочным и сверхточным наручным механизмам сверяют минуты и часы своей жизни 
+           сильные мира сего. Однако основным предназначением престижных швейцарских часов является 
+           статус, ведь именно эксклюзивное изделие может с точностью рассказать о человеке многое: 
+           его предпочтения, познания модных тенденций и даже положение в обществе.
+        </p>
+        <p>
+           Многовековые традиции всегда достойны уважения. И вдвойне заслуживают уважения те традиции, 
+           которые существуют в отличном сочетании с инновационными технологиями. Швейцарские часы с 
+           точностью соответствуют данному описанию. Ведь именно эти часовые механизмы мы представляем, 
+           когда говорим о высоком качестве и престиже. Но, если рассуждать о надежности вкупе с 
+           доступностью, то обычно предпочитают купить копии часов, однако такие же стильные и уникальные. 
+           Вы можете приобрести такие часы в Москве, Санкт-Петербурге, Екатеринбурге, Краснодаре, 
+           Новосибирске, Воронеже и других городах.
+        </p>
+        <p>
+           Известнейшие люди планеты давно по достоинству оценили швейцарские часы и их копии. 
+           Бизнесмены, спортсмены, звезды кино, политики – все они не готовы изменить высокому 
+           стандарту данных изделий. Более того, знаменитости не отказываются носить также и 
+           реплики часов популярных марок. Если Вы находитесь в Новосибирске, Ростове, Екатеринбурге 
+           и желаете купить копии часов, мы с удовольствием поможем Вам в этом. Покупка качественных 
+           реплик воспринимается окружающими сродни вступлению в vip-клуб, как доказательство 
+           высокого статуса человека.
+        </p>
+        <p>
+           Широкий ассортимент реплик часов от ведущих производителей мира. 
+           Покупайте лучшие копии часов в нашем магазине!
+        </p>
+        <p class="last">
+           Для тех, кому приобрести дорогостоящие часы сейчас не позволяют финансовые возможности, наш интернет-салон 
+           элитных изделий предлагает иное решение. В viptimeclub.ru можно купить качественные и стильные наручные 
+           часы швейцарские, точнее – их высококлассные копии, ведущих мировых производителей. Данные изделия имеют 
+           оригинальную «начинку», которая гарантирует, что отличить точную реплику от оригинального механизма 
+           практически невозможно.
+        </p>
 			</div>
 		</div>
 		<div id="footer">
+      <div class="foot_right">
+        <ul>
+          <li><a href="#">О магазине</a>|</li>
+          <li><a href="#">Каталог</a>|</li>
+          <li><a href="#">Продукция</a>|</li>
+          <li><a href="#">Оплата и доставка</a>|</li>
+          <li><a class="last" href="#">Акции и скидки</a></li>
+        </ul>
+        <div class="created_block">
+          <div class="created"><img src="images/foot_logo.png" alt="#" /></div>
+          <div class="copy"><span>&copy; 2012</span><a href="#">Qalitywatch.ru</a></div>
+        </div>
+      </div>
 		  <div class="foot_cal">
 			  Телефон в Москве:
 				<div class="txt_1">
@@ -173,8 +290,8 @@
 				</div>
 				<div class="work">Время работы: <span>9.00 - 22.00</span> Без выходных</div>
 				<div class="foot_reit">
-					<div class="foot_nagrad"></div>
-					<div class="foot_expert"></div>
+					<a href="#"><img class="foot_nagrad" src="images/footer_nagrada.png" alt="#" /></a>
+					<a href="#"><img class="foot_expert" src="images/footer_expert.png" alt="#" /></a>
 			  </div>
 			</div>
 		</div>
